--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,9 @@
 <!-- src\views\partials\header.ejs -->
-<header>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/about">About</a>
+<header class="public-header">
+    <nav class="public-nav">
+        <ul class="no-bullets">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
     </nav>
 </header>
