--- a/src/views/admin/new-product.ejs
+++ b/src/views/admin/new-product.ejs
@@ -15,7 +15,8 @@
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <label for="description">Description:</label>
-            <textarea id="description" name="description"></textarea>
+            <!-- <textarea id="description" name="description"></textarea> -->
+            <input type="text" id="description" name="description" required>
             <label for="price">Price:</label>
             <input type="number" id="price" name="price" step="0.01" required>
             <button type="submit">Add Product</button>
