--- a/src/views/404/index.ejs
+++ b/src/views/404/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <%- include('partials/header'); %>
+    <%- include('../partials/header'); %>
     <main>
         <h1>404 - Page Not Found</h1>
         <p>Sorry, the page you're looking for does not exist.</p>
