--- a/src/views/about/index.ejs
+++ b/src/views/about/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <%- include('partials/header'); %>
+    <%- include('../partials/header'); %>
     <main>
         <h1>About Us</h1>
         <p>This is the about page content.</p>
