--- a/src/views/admin/edit-product.ejs
+++ b/src/views/admin/edit-product.ejs
@@ -15,7 +15,8 @@
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="<%= product.name %>" required>
             <label for="description">Description:</label>
-            <textarea id="description" name="description"><%= product.description %></textarea>
+            <!-- <textarea id="description" name="description"><%= product.description %></textarea> -->
+            <input type="text" id="description" name="description" required>
             <label for="price">Price:</label>
             <input type="number" id="price" name="price" step="0.01" value="<%= product.price %>" required>
             <button type="submit">Update Product</button>
