--- a/src/views/login/index.ejs
+++ b/src/views/login/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <%- include('partials/header'); %>
+    <%- include('../partials/header'); %>
     <main>
         <h1>Login</h1>
         <% if (typeof error !== 'undefined') { %>
