--- a/src/public/css/admin/products/style.css
+++ b/src/public/css/admin/products/style.css
@@ -1,7 +1,7 @@
-[data-xpath^="body/main/div"]:not([data-xpath*="]/div"]) {
-    border-width: .25em;
-    border-color: hsla(0, 100%, 50%, 0.5);
-    border-style: solid;
-    padding: 0.5em;
-    margin: 1em;
+[data-xpath^='body/main/div']:not([data-xpath*=']/div']) {
+  border-width: 0.25em;
+  border-color: hsla(0, 100%, 50%, 0.5);
+  border-style: solid;
+  padding: 0.5em;
+  margin: 1em;
 }
