--- a/src/views/admin/products.ejs
+++ b/src/views/admin/products.ejs
@@ -8,14 +8,15 @@
   <title>Admin - Products</title>
   <link rel="stylesheet" href="/css/admin/styles.css">
   <link rel="stylesheet" href="/css/admin/products/style.css">
+  <script type="module" src="/js/admin/products/index.js"></script>
 </head>
 
 <body>
   <%- include('../partials/admin-header'); %>
   <main class="admin-content" data-xpath="body/main">
-<!--     <h1>Products</h1>
+    <!--     <h1>Products</h1>
     <a href="/admin/products/new">Add New Product</a>
- -->    <% products.forEach((product, index)=> { %>
+ --> <% products.forEach((product, index)=> { %>
     <div data-xpath="body/main/div[<%= index + 1 %>]">
       <div data-xpath="body/main/div[<%= index + 1 %>]/div[1]">
         <%= product.name %>
@@ -32,7 +33,6 @@
     </div>
     <% }) %>
   </main>
-  <script src="/js/admin/products/script.js"></script>
 </body>
 
 </html>
