--- a/src/views/login/index.ejs
+++ b/src/views/login/index.ejs
@@ -16,7 +16,7 @@
         <% } %>
         <form action="/login" method="POST">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username" autofocus required>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
