--- a/v0.0.1/src/views/index.ejs
+++ b/v0.0.1/src/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/+/style/index.css">
 </head>
 <body>
     <%- include('+/partials/header'); %>
@@ -13,6 +13,6 @@
         <h1>Welcome to Home Page</h1>
         <p>This is the home page content.</p>
     </main>
-    <script src="/index.js"></script>
+    <script src="/+/script/index.js"></script>
 </body>
 </html>
