Before starting to implement Fibber. Works

--- a/v0.0.1/src/views/about/index.ejs
+++ b/v0.0.1/src/views/about/index.ejs
@@ -1,4 +1,4 @@
-<!-- src\views\about.ejs -->
+<!-- src\views\about\index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="/about/styles.css">
 </head>
 <body>
-    <%- include('../+/partials/header'); %>
+    <%- include('../+/partials/header/index.ejs'); %>
     <main>
         <h1>About Us</h1>
         <p>This is the about page content.</p>
     </main>
-    <script src="/index.js"></script>
+    <script src="/about/+/script/index.js"></script>
 </body>
 </html>
