--- a/v0.0.1/src/views/admin/products/index.ejs
+++ b/v0.0.1/src/views/admin/products/index.ejs
@@ -1,4 +1,4 @@
-<!-- src/views/admin/products.ejs -->
+<!-- src/views/admin/products/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <%- include('../partials/admin-header'); %>
+  <%- include('../../+/partials/header/admin/index.ejs'); %>
   <main class="admin-content" data-xpath="body/main">
     <!--     <h1>Products</h1>
     <a href="/admin/products/new">Add New Product</a>
