--- a/v0.0.1/src/views/+/partials/header/index.ejs
+++ b/v0.0.1/src/views/+/partials/header/index.ejs
@@ -1,4 +1,4 @@
-<!-- src\views\+\partials\header.ejs -->
+<!-- src\views\+\partials\header\index.ejs -->
 
 <header class="public-header">
   <nav class="public-nav">
