--- a/v0.0.1/src/views/404/index.ejs
+++ b/v0.0.1/src/views/404/index.ejs
@@ -1,4 +1,4 @@
-<!-- src\views\404.ejs -->
+<!-- src\views\404\index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/404/styles.css">
 </head>
 <body>
-    <%- include('../+/partials/header'); %>
+    <%- include('../+/partials/header/index.ejs'); %>
     <main>
         <h1>404 - Page Not Found</h1>
         <p>Sorry, the page you're looking for does not exist.</p>
