--- a/v0.0.1/src/views/admin/products/product/edit/index.ejs
+++ b/v0.0.1/src/views/admin/products/product/edit/index.ejs
@@ -1,4 +1,4 @@
-<!-- src/views/admin/edit-product.ejs -->
+<!-- src/views/admin/products/product/edit/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/admin/styles.css">
 </head>
 <body>
-    <%- include('../partials/admin-header'); %>
+    <%- include('../../../../+/partials/header/admin/index.ejs'); %>
     <main class="admin-content">
         <h1>Edit Product</h1>
         <form action="/admin/products/<%= product._id %>" method="POST">
