Mistakes corrected, some todos fulfilled

--- a/v0.0.1/src/views/index.ejs
+++ b/v0.0.1/src/views/index.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <%- include('+/partials/header/index.ejs'); %>
+  <%- include('+/partials/header/index'); %>
   <main>
     <h1>Welcome to Home Page</h1>
     <p>This is the home page content.</p>
