--- a/v0.0.1/src/views/404/index.ejs
+++ b/v0.0.1/src/views/404/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/404/styles.css">
 </head>
 <body>
-    <%- include('../+/partials/header/index.ejs'); %>
+    <%- include('../+/partials/header/index'); %>
     <main>
         <h1>404 - Page Not Found</h1>
         <p>Sorry, the page you're looking for does not exist.</p>
