--- a/v0.0.1/src/views/about/index.ejs
+++ b/v0.0.1/src/views/about/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/about/styles.css">
 </head>
 <body>
-    <%- include('../+/partials/header/index.ejs'); %>
+    <%- include('../+/partials/header/index'); %>
     <main>
         <h1>About Us</h1>
         <p>This is the about page content.</p>
