--- a/v0.0.1/src/views/admin/products/product/edit/index.ejs
+++ b/v0.0.1/src/views/admin/products/product/edit/index.ejs
@@ -1,26 +1,29 @@
 <!-- src/views/admin/products/product/edit/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - Edit Product</title>
-    <link rel="stylesheet" href="/css/admin/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admin - Edit Product</title>
+  <link rel="stylesheet" href="/css/admin/styles.css">
 </head>
+
 <body>
-    <%- include('../../../../+/partials/header/admin/index.ejs'); %>
-    <main class="admin-content">
-        <h1>Edit Product</h1>
-        <form action="/admin/products/<%= product._id %>" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" value="<%= product.name %>" required>
-            <label for="description">Description:</label>
-            <!-- <textarea id="description" name="description"><%= product.description %></textarea> -->
-            <input type="text" id="description" name="description" required>
-            <label for="price">Price:</label>
-            <input type="number" id="price" name="price" step="0.01" value="<%= product.price %>" required>
-            <button type="submit">Update Product</button>
-        </form>
-    </main>
+  <%- include('../../../../+/partials/header/admin/index'); %>
+  <main class="admin-content">
+    <h1>Edit Product</h1>
+    <form action="/admin/products/<%= product._id %>" method="POST">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" value="<%= product.name %>" required>
+      <label for="description">Description:</label>
+      <!-- <textarea id="description" name="description"></textarea> -->
+      <input type="text" id="description" name="description" required value="<%= product.description %>">
+      <label for="price">Price:</label>
+      <input type="number" id="price" name="price" step="0.01" value="<%= product.price %>" required>
+      <button type="submit">Update Product</button>
+    </form>
+  </main>
 </body>
+
 </html>
