--- a/v0.0.1/src/views/admin/products/product/new/index.ejs
+++ b/v0.0.1/src/views/admin/products/product/new/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/admin/styles.css">
 </head>
 <body>
-    <%- include('../../../../+/partials/header/admin/index.ejs'); %>
+    <%- include('../../../../+/partials/header/admin/index'); %>
     <main class="admin-content">
         <h1>Add New Product</h1>
         <form action="/admin/products" method="POST">
