--- a/v0.0.1/src/views/login/index.ejs
+++ b/v0.0.1/src/views/login/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/login/styles.css">
 </head>
 <body>
-    <%- include('../+/partials/header/index.ejs'); %>
+    <%- include('../+/partials/header/index'); %>
     <main>
         <h1>Login</h1>
         <% if (typeof error !== 'undefined') { %>
