--- a/v0.0.1/src/view/404/index.ejs
+++ b/v0.0.1/src/view/404/index.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-    <link rel="stylesheet" href="/404/styles.css">
+    <title><%= title %></title>
+    <!-- <link rel="stylesheet" href="/404/styles.css"> -->
 </head>
 <body>
     <%- include('../+/partials/header/index'); %>
